--- a/src/component/CurrencyExchange/currencyExchange.css
+++ b/src/component/CurrencyExchange/currencyExchange.css
@@ -9,11 +9,23 @@
   height: 458px;
 }
 
+@media screen and (min-width: 703px) and (max-width: 1279px) {
+  .wrap {
+    /* height: 381px; */
+    height: 190px;
+    background-image: none;
+
+    border-radius: 3px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 10px 17.321px 40px 0px rgba(1, 1, 0, 0.15);
+  }
+}
+
 @media screen and (min-width: 1280px) {
   .wrap {
-    background-image: inherit;
     width: 392px;
     height: 190px;
+    background-image: url(../../images/bg_exchange_currency.jpg);
   }
   .currencyTable {
     min-width: 392px;
@@ -21,12 +33,6 @@
   }
   .currencyTable__head {
     font-size: 11px;
-  }
-}
-
-@media screen and (min-width: 703px) and (max-width: 1279px) {
-  .wrap {
-    height: 381px;
   }
 }
 
