--- a/src/globalStyles.module.css
+++ b/src/globalStyles.module.css
@@ -45,3 +45,24 @@ img {
         width: 1192px;
     }
 }
+.gridContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-template-areas:
+        "header header header header"
+        "navigation body body body"
+        "navigation body body body";
+}
+
+:global(.header) {
+    grid-area: header;
+}
+:global(.navigation) {
+    grid-area: navigation;
+}
+
+:global(.body) {
+    grid-area: body;
+}
