--- a/src/component/Container/Container.css
+++ b/src/component/Container/Container.css
@@ -4,6 +4,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
   .container {
+    /* composes: global(body); */
       width: 100vw;
       height: 100vh;
       background-color: #f8f8fe;
@@ -18,6 +19,5 @@
   }
 }
 
-/* @media screen and (min-width: 1280px) {
-} */
-/* f8f8fe */
+@media screen and (min-width: 1280px) {
+} 
