--- a/src/component/NavSection/NavSection.module.css
+++ b/src/component/NavSection/NavSection.module.css
@@ -68,13 +68,14 @@
         font-size: 0px;
     }
 }
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 1279px) {
     .container {
         background-color: inherit;
     }
     .section {
         background-color: #f8fdfe;
         padding: 30px 0;
+        /* composes: global(navigation); */
     }
     .sectionContainer {
         display: flex;
@@ -127,5 +128,11 @@
     }
     .balanceTitle, .balanceSum {
         color: rgb(107, 125, 131);
+    }
+}
+@media (min-width: 1280px) {
+    .sectionContainer {
+        display: flex;
+        flex-direction: column;
     }
 }
