--- a/src/component/Header/Header.module.css
+++ b/src/component/Header/Header.module.css
@@ -83,3 +83,9 @@
     }
     
 }
+@media screen and (min-width: 1280px) {
+    .header {
+        grid-area: header;
+        height: fit-content;
+    }
+}
