--- a/src/component/NavSection/NavSection.module.css
+++ b/src/component/NavSection/NavSection.module.css
@@ -75,7 +75,6 @@
     .section {
         background-color: #f8fdfe;
         padding: 30px 0;
-        /* composes: global(navigation); */
     }
     .sectionContainer {
         display: flex;
@@ -134,5 +133,8 @@
     .sectionContainer {
         display: flex;
         flex-direction: column;
+    }
+    .section {
+        grid-area: navigation;
     }
 }
