--- a/src/globalStyles.module.css
+++ b/src/globalStyles.module.css
@@ -45,24 +45,28 @@ img {
         width: 1192px;
     }
 }
-.gridContainer {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 0px 0px;
-    grid-template-areas:
-        "header header header header"
-        "navigation body body body"
-        "navigation body body body";
-}
+@media (min-width: 1280px){
+ .gridContainer {
+     display: grid;
+     grid-template-columns: 0.26fr 1.74fr;
+     grid-template-rows: 0.2fr 1.8fr;
+     gap: 0px 0px;
+     grid-template-areas:
+         "header header"
+         "navigation body"
+         "navigation body";
+    background-color: #f2eaf0;
+ }
 
-:global(.header) {
-    grid-area: header;
-}
-:global(.navigation) {
-    grid-area: navigation;
-}
+ :global(.header) {
+     grid-area: header;
+ }
 
-:global(.body) {
-    grid-area: body;
+ :global(.navigation) {
+     grid-area: navigation;
+ }
+
+ :global(.body) {
+     grid-area: body;
+ }
 }
