--- a/src/component/CurrencyExchange/currencyExchange.css
+++ b/src/component/CurrencyExchange/currencyExchange.css
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   width: 320px;
   height: 458px;
+  /* margin: 0; */
 }
 
 @media screen and (min-width: 1280px) {
