--- a/src/component/CurrencyExchange/currencyExchange.css
+++ b/src/component/CurrencyExchange/currencyExchange.css
@@ -23,12 +23,13 @@
 
 @media screen and (min-width: 1280px) {
   .wrap {
-    width: 392px;
+    /* width: 392px; */
+    width: 312px;
     height: 190px;
     background-image: url(../../images/bg_exchange_currency.jpg);
   }
   .currencyTable {
-    min-width: 392px;
+    min-width: 312px;
     min-height: 190px;
   }
   .currencyTable__head {
@@ -38,7 +39,7 @@
 
 .currencyTable {
   height: 190px;
-  width: 320px;
+  /* width: 320px; */
   background-color: #f3f6f6;
   border-spacing: 0 2px;
 }
