--- a/src/component/NavSection/NavSection.module.css
+++ b/src/component/NavSection/NavSection.module.css
@@ -73,7 +73,7 @@
         background-color: inherit;
     }
     .section {
-        background-color: #f8fdfe;
+        /* background-color: #f8fdfe; */
         padding: 30px 0;
     }
     .sectionContainer {
@@ -136,5 +136,15 @@
     }
     .section {
         grid-area: navigation;
+    }
+    .list {
+        display: block;
+    }
+    .link {
+        display: flex;
+        align-items: center;
+    }
+    .link::before {
+        min-width: 24px;
     }
 }
