--- a/src/component/CurrencyExchange/currencyExchange.css
+++ b/src/component/CurrencyExchange/currencyExchange.css
@@ -39,7 +39,7 @@
 
 .currencyTable {
   height: 190px;
-  /* width: 320px; */
+  width: 320px;
   background-color: #f3f6f6;
   border-spacing: 0 2px;
 }
