--- a/src/component/Home/Home.module.css
+++ b/src/component/Home/Home.module.css
@@ -1,7 +1,8 @@
 /*! Mobile */
 
 .financeMobSection {
-  background-color: #f3f6f6;
+  /* background-color: #f3f6f6; */
+  background-color: #ffffff;
   margin: auto;
 }
 
@@ -11,8 +12,9 @@
   justify-content: center;
   margin: 0px auto;
   text-align: center;
-  background-color: #f3f6f6;
-  margin-bottom: 20px;
+  /* background-color: #f3f6f6; */
+  background-color: #ffffff;
+  padding-bottom: 20px;
 }
 
 .financeMobList {
@@ -40,7 +42,7 @@
   display: flex;
   flex-direction: row;
   text-align: left;
-  padding: 7px 0px 7px 16px;
+  padding: 7px 10px 7px 16px;
 }
 
 .financeMobTitle {
@@ -130,6 +132,7 @@
   }
   
   .financeWrapper {
+    background-color: #f8f8fe;
     /* width: 738px; */
     /* width: 100%; */
   }
@@ -150,10 +153,12 @@
     /* width: 856px; */
     width: 100%;
     margin: 0px auto;
+
+    /* margin: 0px 46px 0px 26px; */
+    background-color: #ececf3;
   }
 
   .financeTable {
-    margin: 0px 46px 0px 26px;
   }
 
   .tr:nth-child(odd) {
@@ -168,7 +173,7 @@
   .currencySection {
     position: absolute;
     width: 312px;
-    left: 33px;
-    bottom: 52px;
+    left: -300px;
+    bottom: -10px;
   }
 }
