--- a/src/component/Container/Container.module.css
+++ b/src/component/Container/Container.module.css
@@ -18,7 +18,9 @@
 @media screen and (min-width: 1280px) {
   .container {
     grid-area: body;
+    max-width: 930px;
     position: relative;
+    background-color: #f2eaf0;
   }
 }
 /* eaf1ef */
