--- a/src/component/CurrencyExchange/currencyExchange.css
+++ b/src/component/CurrencyExchange/currencyExchange.css
@@ -14,7 +14,7 @@
     /* height: 381px; */
     height: 190px;
     background-image: none;
-
+    margin: 0px 0px 52px 32px;
     border-radius: 3px;
     background-color: rgb(255, 255, 255);
     box-shadow: 10px 17.321px 40px 0px rgba(1, 1, 0, 0.15);
