--- a/src/component/Container/Container.module.css
+++ b/src/component/Container/Container.module.css
@@ -1,11 +1,11 @@
 .container {
-  background-color: #f3f6f6;
+  background-color: white;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
   .container {
     width: 100vw;
-    background-color: #ffffff;
+    background-color: white;
     background-image: url(../../images/bg_exchange_tablet.png);
     background-repeat: no-repeat;
     background-position-y: 480px;
