--- a/src/component/Header/Header.module.css
+++ b/src/component/Header/Header.module.css
@@ -87,6 +87,7 @@
         margin-bottom: 46px;
         width: 100vw;
         position: fixed;
+        z-index: 1;
         left: 0;
         top: 0;
         
