--- a/src/component/TransactionForm/TransactionForm.module.css
+++ b/src/component/TransactionForm/TransactionForm.module.css
@@ -21,9 +21,12 @@
 }
 
 .layout {
-    position: absolute;
+    position: fixed;
     width: 100vw;
     height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: 2;
     background-color: rgba(0, 0, 0, 0.1);
 }
 
