--- a/src/component/Container/Container.module.css
+++ b/src/component/Container/Container.module.css
@@ -8,7 +8,7 @@
     background-color: white;
     background-image: url(../../images/bg_exchange_tablet.png);
     background-repeat: no-repeat;
-    background-position-y: 480px;
+    background-position-y: 430px;
     background-size: contain;
   }
 }
@@ -18,5 +18,6 @@
     grid-area: body;
     max-width: 930px;
     background-color: #f2eaf0;
+    position: relative;
   }
 }
