--- a/src/component/Home/Home.module.css
+++ b/src/component/Home/Home.module.css
@@ -27,9 +27,9 @@
     background-color: #f2eaf0;
   }
 
-  .currencySection {
+  /* .currencySection {
     position: absolute;
     top: 338px;
     left: -312px;
-  }
+  } */
 }
