--- a/src/views/SignUp/SignUp.module.css
+++ b/src/views/SignUp/SignUp.module.css
@@ -2,60 +2,6 @@
   padding-top: 58px;
   text-align: center;
 }
-.signUpLogo {
-  margin: 0 auto;
-  margin-bottom: 20px;
-  width: 25px;
-  height: 25px;
-}
-.formSignUp {
-  margin-top: 33px;
-  text-align: center;
-}
-
-.signUpEmail {
-  background-color: #f9fbfb;
-  width: 275px;
-  height: 48px;
-  margin-bottom: 12px;
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='%23dbe1e6' %3e%3cpath d='M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z' /%3e%3cpath d='M0 0h24v24H0z' fill='none' /%3e%3c/svg%3e");
-  background-repeat: no-repeat;
-  background-position-x: 15px;
-  background-position-y: 10px;
-  padding-left: 50px;
-  color: black;
-  font-size: 15px;
-  border-radius: 6px;
-  outline: none;
-  border: 1px solid transparent;
-}
-
-.signUpPassword {
-  composes: signUpEmail;
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg aria-hidden='true' focusable='false' width='23' height='23' data-prefix='fas' data-icon='lock' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512' class='svg-inline--fa fa-lock fa-w-14 fa-2x'%3e%3cpath fill='%23dbe1e6' d='M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z' class=''%3e%3c/path%3e%3c/svg%3e");
-}
-.signUpName {
-  composes: signUpEmail;
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg aria-hidden='true' width='23' height='23' data-prefix='far' data-icon='user' class='svg-inline--fa fa-user fa-w-14' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3e%3cpath fill='%23dbe1e6' d='M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z'/%3e%3c/svg%3e");
-}
-.signUpButton {
-  width: 275px;
-  margin: 0 auto;
-  height: 39px;
-  background-color: #e18337;
-  border: none;
-  border-radius: 4px;
-  color: white;
-  font-size: 15px;
-  margin-top: 18px;
-  margin-bottom: 10px;
-}
-
-.link {
-  color: rgb(166, 177, 181);
-  text-align: center;
-  text-decoration: none;
-}
 
 .linkSignIn {
   margin: 0 auto;
@@ -68,11 +14,12 @@
 @media (min-width: 768px) {
   .modal {
     background-image: url(../../images/Authentication/bg-tablet-registration.png);
+    background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
   }
   .formContainer {
-    height: 535px;
+    height: 550px;
     width: 550px;
     background-color: white;
     position: absolute;
@@ -80,28 +27,13 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
-  .signUpLogoContainer {
-    padding-top: 35px;
-    display: flex;
-    justify-content: center;
+}
+@media (min-width: 1280px) {
+  .modal {
+    background-image: url('../../images/Authentication/bg-desktop-registration.png');
   }
-  .signUpLogo {
-    margin: 5px;
-  }
-
-  .signUpEmail {
-    width: 433px;
-    height: 57px;
-    background-position-y: 15px;
-    font-size: 18px;
-    padding-left: 60px;
-  }
-  .signUpButton {
-    width: 280px;
-    margin-top: 22px;
-    font-size: 18px;
-  }
-  .linkSignIn {
-    font-size: 18px;
+  .formContainer{
+    left: 70%;
+    box-shadow: 0px 0px 19px 8px rgba(0,0,0,0.36);
   }
 }
