--- a/src/views/SignIn/Authentication.module.css
+++ b/src/views/SignIn/Authentication.module.css
@@ -5,15 +5,19 @@
   position: absolute;
   color: red;
   font-weight: 15px;
+  width: 200px;
   left: 50%;
-  top: 37px;
+  top: 30px;
   transform: translateX(-50%);
+}
+.iPhoneContainer {
+  display: none;
 }
 
 .authenticationLogoContainer {
-    padding-top: 100px;
-    text-align: center;
-  }
+  padding-top: 100px;
+  text-align: center;
+}
 
 .authenticationLogo {
   margin: 0 auto;
@@ -23,8 +27,9 @@
 }
 
 .authenticationForm {
-  margin-top: 33px;
   text-align: center;
+  width: 300px;
+  margin: 33px auto;
 }
 
 .authenticationEmail {
@@ -96,6 +101,10 @@
   .authenticationLogo {
     margin: 5px;
   }
+  .authenticationForm{
+    width: 425px;
+  }
+
   .authenticationEmail {
     width: 433px;
     height: 57px;
@@ -103,7 +112,10 @@
     font-size: 18px;
     padding-left: 60px;
   }
-
+  .authenticationError{
+    left: 220px;
+    top: 35px;
+  }
   .authenticationButton {
     width: 280px;
     margin-top: 22px;
@@ -111,9 +123,27 @@
   }
 }
 @media (min-width: 1280px) {
-    .formContainer{
-      left: 70%;
-      box-shadow: 0px 0px 19px 8px rgba(0,0,0,0.36);
-    }
+  .formContainer {
+    left: 70%;
+    box-shadow: 0px 0px 19px 8px rgba(0, 0, 0, 0.36);
   }
-  
+  .iPhoneContainer {
+    height: 650px;
+    width: 300px;
+    display: block;
+    position: relative;
+    top: 50%;
+    left: 10%;
+    transform: translateY(-50%);
+  }
+  .iPhoneIMG {
+    height: 590px;
+    width: 290px;
+  }
+  .financeApp {
+    margin-top: 35px;
+    font-size: 24px;
+    color: white;
+    text-align: center;
+  }
+}
