--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -36,14 +36,15 @@
 
   @font-face {
     font-family: "HelveticaNeueCyr";
-    font-weight: bold;
+    font-weight: 900;
     src: url(./HelveticaNeueCyr/HelveticaNeueCyr-Black.ttf);
   }
    
   
   @font-face {
     font-family: "HelveticaNeueCyr";
-    font-weight: bold;
+    font-weight: 900;
+    font-style: italic;
     src: url(./HelveticaNeueCyr/HelveticaNeueCyr-BlackItalic.ttf);
   }
   
@@ -56,84 +57,85 @@
   @font-face {
     font-family: "HelveticaNeueCyr";
     font-weight: bold;
+    font-style: italic;
     src: url(./HelveticaNeueCyr/HelveticaNeueCyr-BoldItalic.ttf);
   }
   
   @font-face {
     font-family: "HelveticaNeueCyr";
-    font-weight: bold;
+    font-weight: 900;
     src: url(./HelveticaNeueCyr/HelveticaNeueCyr-Heavy.ttf);
   }
   
   @font-face {
     font-family: "HelveticaNeueCyr";
     font-weight: bold;
+    font-style: italic;
     src: url(./HelveticaNeueCyr/HelveticaNeueCyr-HeavyItalic.ttf);
   }
 
   @font-face {
     font-family: "HelveticaNeueCyr";
-    font-weight: bold;
-    src: url(./HelveticaNeueCyr/HelveticaNeueCyr-HeavyItalic.ttf);
-  }
-
-  @font-face {
-    font-family: "HelveticaNeueCyr";
-    font-weight: bold;
+    font-weight: 500;
+    font-style: 500;
     src: url(./HelveticaNeueCyr/HelveticaNeueCyr-Italic.ttf);
   }
 
   @font-face {
     font-family: "HelveticaNeueCyr";
-    font-weight: bold;
+    font-weight: 300;
     src: url(./HelveticaNeueCyr/HelveticaNeueCyr-Light.ttf);
   }
 
   @font-face {
     font-family: "HelveticaNeueCyr";
-    font-weight: bold;
+    font-weight: 300;
+    font-style: italic;
     src: url(./HelveticaNeueCyr/HelveticaNeueCyr-LightItalic.ttf);
   }
 
   @font-face {
     font-family: "HelveticaNeueCyr";
-    font-weight: bold;
+    font-weight: 500;
     src: url(./HelveticaNeueCyr/HelveticaNeueCyr-Medium.ttf);
   }
 
   @font-face {
     font-family: "HelveticaNeueCyr";
-    font-weight: bold;
+    font-weight: 500;
+    font-style: italic;
     src: url(./HelveticaNeueCyr/HelveticaNeueCyr-MediumItalic.ttf);
   }
 
   @font-face {
     font-family: "HelveticaNeueCyr";
-    font-weight: bold;
+    font-weight: 400;
     src: url(./HelveticaNeueCyr/HelveticaNeueCyr-Roman.ttf);
   }
 
   @font-face {
     font-family: "HelveticaNeueCyr";
-    font-weight: bold;
+    font-weight: 100;
     src: url(./HelveticaNeueCyr/HelveticaNeueCyr-Thin.ttf);
   }
 
   @font-face {
     font-family: "HelveticaNeueCyr";
-    font-weight: bold;
+    font-weight: 100;
+    font-style: italic;
     src: url(./HelveticaNeueCyr/HelveticaNeueCyr-ThinItalic.ttf);
   }
 
   @font-face {
     font-family: "HelveticaNeueCyr";
-    font-weight: bold;
+    font-weight: 200;
     src: url(./HelveticaNeueCyr/HelveticaNeueCyr-UltraLight.ttf);
   }
 
   @font-face {
     font-family: "HelveticaNeueCyr";
-    font-weight: bold;
+    font-weight: 200;
+    font-style: italic;
     src: url(./HelveticaNeueCyr/HelveticaNeueCyr-UltraLightItalic.ttf);
   }
  
