--- a/src/globalStyles.module.css
+++ b/src/globalStyles.module.css
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: "HelveticaNeueCyr", Arial, sans-serif;
 }
 
 ul {
