--- a/src/component/Header/Header.module.css
+++ b/src/component/Header/Header.module.css
@@ -45,7 +45,7 @@
     display: block;
     height: 16px;
     width: 16px;
-    background-image: url(./Image/exit.svg);
+    background-image: url(../../images/Header/exit.svg);
     fill: #79879a;
 }
 @media (max-width: 767px) {
