--- a/src/views/SignIn/Authentication.module.css
+++ b/src/views/SignIn/Authentication.module.css
@@ -7,7 +7,7 @@
   font-weight: 15px;
   width: 200px;
   left: 50%;
-  top: 30px;
+  top: 31px;
   transform: translateX(-50%);
 }
 .iPhoneContainer {
@@ -15,8 +15,6 @@
 }
 
 .authenticationLogoContainer {
-  font-family: "BauhausC";
-  font-weight: bold;
   padding-top: 100px;
   text-align: center;
 }
@@ -27,9 +25,15 @@
   width: 25px;
   height: 25px;
 }
+.authenticationLogoName {
+  font-family: "BauhausC";
+  font-weight: 600;
+  font-size: 24px;
+}
 
 .authenticationForm {
   text-align: center;
+
   width: 300px;
   margin: 33px auto;
 }
@@ -45,7 +49,9 @@
   background-position-y: 10px;
   padding-left: 50px;
   color: black;
-  font-size: 15px;
+  font-family: "HelveticaNeueCyr";
+  font-weight: 400;
+  font-size: 13px;
   border-radius: 6px;
   outline: none;
   border: 1px solid transparent;
@@ -74,6 +80,8 @@
   border: none;
   border-radius: 4px;
   color: white;
+  font-family: "HelveticaNeueCyr";
+  font-weight: bold;
   font-size: 15px;
   margin-top: 18px;
   margin-bottom: 10px;
@@ -101,9 +109,12 @@
     justify-content: center;
   }
   .authenticationLogo {
-    margin: 5px;
+  margin: 0px;
   }
-  .authenticationForm{
+  .authenticationLogoName{
+    margin-left: 10px;
+  }
+  .authenticationForm {
     width: 425px;
   }
 
@@ -111,10 +122,10 @@
     width: 433px;
     height: 57px;
     background-position-y: 15px;
-    font-size: 18px;
+    font-size: 15px;
     padding-left: 60px;
   }
-  .authenticationError{
+  .authenticationError {
     left: 220px;
     top: 35px;
   }
@@ -145,7 +156,7 @@
   .financeApp {
     margin-top: 35px;
     font-size: 24px;
-    font-family: "HelveticaNeueCyr";
+    font-family: "BauhausC";
     font-weight: bold;
     color: white;
     text-align: center;
