--- a/src/views/SignUp/SignUp.module.css
+++ b/src/views/SignUp/SignUp.module.css
@@ -4,9 +4,11 @@
 }
 
 .linkSignIn {
-  margin: 0 auto;
-  font-size: 15px;
-  width: 45px;
+  font-family: "HelveticaNeueCyr";
+  font-weight: 400;
+  margin: -10px auto;
+  font-size: 12px;
+  width: 35px;
   border-bottom: 1px solid rgb(166, 177, 181);
 }
 
@@ -18,7 +20,7 @@
     height: 100vh;
   }
   .formContainer {
-    height: 560px;
+    height: 550px;
     width: 550px;
     background-color: white;
     position: absolute;
