--- a/src/component/Header/Header.module.css
+++ b/src/component/Header/Header.module.css
@@ -27,7 +27,7 @@
  color: #79879a;
  font-size: 20px;
  font-family: "BauhausC", sans-serif;
- font-weight: bold;
+ font-weight: 600;
 }
 .name {
     padding-right: 13px;
