refactor: code review

--- a/src/views/SignIn/SignIn.module.css
+++ b/src/views/SignIn/SignIn.module.css
@@ -1,3 +1,5 @@
+@value label from "../../assets/styles/Authentication.module.css";
+
 .linkSignUp {
   font-family: "HelveticaNeueCyr";
   font-weight: 400;
