changed statisics render

--- a/src/component/Statistic/statistic.module.css
+++ b/src/component/Statistic/statistic.module.css
@@ -21,7 +21,7 @@
   width: 130px;
   height: 35px;
 }
-.statictic {
+.statistic {
   display: flex;
   flex-direction: column;
 }
@@ -29,7 +29,7 @@
   width: 320px;
   margin: 0 auto;
 }
-.statictic__title {
+.statistic__title {
   padding: 20px;
   margin: 0px;
   display: flex;
@@ -37,11 +37,16 @@
   justify-content: space-between;
   background-color: #f3f6f6;
 }
+.chart_error{
+  padding: 10px;
+  text-align: center;
+  font-size: 18px;
+}
 .costs_title,
 .costs_total,
 .income_total,
-.statictic__total,
-.statictic__category {
+.statistic__total,
+.statistic__category {
   font-size: 15px;
   font-weight: 900;
 }
@@ -156,10 +161,12 @@
     width: 768px;
     margin: 0 auto;
   }
-  .statictic__title {
+  .statistic__title {
     display: none;
   }
-
+  .statistic__list_error{
+    height: auto;
+  }
   .statistic__list {
     height: 220px;
     flex-wrap: wrap;
@@ -229,7 +236,7 @@
     width: 360px;
   }
 
-  .statictic__title {
+  .statistic__title {
     display: flex;
     padding: 25px 35px;
   }
